add some tests  + trim inout data on client + add check for refill